testsuite/poke.pkl/int-struct-type-diag-10.pk
/* { dg-do compile } */

deftype Foo =
  struct uint<33>
  {
    int<15> c @ 0#B; /* { dg-error "labels are not allowed" } */
    int<17> b;
  };
